--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
+    "yaml": "^2.3.1",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
