--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.2.1",
     "@angular/platform-browser-dynamic": "^16.2.1",
     "@angular/router": "^16.2.1",
+    "chart.js": "^4.4.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
