--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --disable-host-check --port 8444",
+    "start": "ng serve --disable-host-check --host bitfever-server --port 8444",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "^16.2.5",
     "@angular/platform-browser-dynamic": "^16.2.5",
     "@angular/router": "^16.2.5",
-    "angular-auth-oidc-client": "^16.0.1",
+    "angular-auth-oidc-client": "^16.0.2",
     "chart.js": "^4.4.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.1",
