--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.2.5",
     "@angular/router": "^16.2.5",
     "angular-auth-oidc-client": "^16.0.2",
+    "apexcharts": "^3.51.0",
     "chart.js": "^4.4.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.1",
