--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-auth-oidc-client": "^16.0.2",
     "apexcharts": "^3.51.0",
     "chart.js": "^4.4.0",
+    "ng-apexcharts": "^1.11.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
