--- a/src/assets/presets/products.yaml
+++ b/src/assets/presets/products.yaml
@@ -1,366 +1,366 @@
-data:
-  #--- Indices --------------------------------
+---
+#--- Indices --------------------------------
 
-  - symbol   : ES
-    name     : E-Mini S&P 500
-    increment: 0.25
-    market   : IN
-    product  : FU
-    exchange : CME
-    pointVal : 50
-    costPerTrade:
-    margin   :
+- symbol      : ES
+  name        : E-Mini S&P 500
+  increment   : 0.25
+  market      : IN
+  product     : FU
+  exchange    : CME
+  pointValue  : 50
+  costPerTrade:
+  margin      :
 
-  - symbol   : MES
-    name     : Micro E-Mini S&P 500
-    increment: 0.25
-    market   : IN
-    product  : FU
-    exchange : CME
-    pointVal : 5
-    costPerTrade: 4
-    margin   : 1314
+- symbol      : MES
+  name        : Micro E-Mini S&P 500
+  increment   : 0.25
+  market      : IN
+  product     : FU
+  exchange    : CME
+  pointValue  : 5
+  costPerTrade: 4
+  margin      : 1314
 
-  - symbol   : NQ
-    name     : E-Mini Nasdaq-100
-    increment: 0.25
-    market   : IN
-    product  : FU
-    exchange : CME
-    pointVal : 20
-    costPerTrade:
-    margin   :
+- symbol      : NQ
+  name        : E-Mini Nasdaq-100
+  increment   : 0.25
+  market      : IN
+  product     : FU
+  exchange    : CME
+  pointValue  : 20
+  costPerTrade:
+  margin      :
 
-  - symbol   : MNQ
-    name     : Micro E-mini Nasdaq 100
-    increment: 0.25
-    market   : IN
-    product  : FU
-    exchange : CME
-    pointVal : 2
-    costPerTrade: 4
-    margin   : 2280
+- symbol      : MNQ
+  name        : Micro E-mini Nasdaq 100
+  increment   : 0.25
+  market      : IN
+  product     : FU
+  exchange    : CME
+  pointValue  : 2
+  costPerTrade: 4
+  margin      : 2280
 
-  - symbol   : YM
-    name     : Mini Dow Jones 30
-    increment: 1
-    market   : IN
-    product  : FU
-    exchange : CME
-    pointVal : 5
-    costPerTrade:
-    margin   :
+- symbol      : YM
+  name        : Mini Dow Jones 30
+  increment   : 1
+  market      : IN
+  product     : FU
+  exchange    : CME
+  pointValue  : 5
+  costPerTrade:
+  margin      :
 
-  - symbol   : MYM
-    name     : Micro Dow Jones 30
-    increment: 1
-    market   : IN
-    product  : FU
-    exchange : CME
-    pointVal : 0.5
-    costPerTrade: 5
-    margin   : 1280
+- symbol      : MYM
+  name        : Micro Dow Jones 30
+  increment   : 1
+  market      : IN
+  product     : FU
+  exchange    : CME
+  pointValue  : 0.5
+  costPerTrade: 5
+  margin      : 1280
 
-  - symbol   : FDAX
-    name     : DAX
-    increment: 1
-    market   : IN
-    product  : FU
-    exchange : EUREX
-    pointVal : 25
-    costPerTrade:
-    margin   :
+- symbol      : FDAX
+  name        : DAX
+  increment   : 1
+  market      : IN
+  product     : FU
+  exchange    : EUREX
+  pointValue  : 25
+  costPerTrade:
+  margin      :
 
-  - symbol   : FDXM
-    name     : Mini DAX
-    increment: 1
-    market   : IN
-    product  : FU
-    exchange : EUREX
-    pointVal : 5
-    costPerTrade:
-    margin   :
+- symbol      : FDXM
+  name        : Mini DAX
+  increment   : 1
+  market      : IN
+  product     : FU
+  exchange    : EUREX
+  pointValue  : 5
+  costPerTrade:
+  margin      :
 
-  - symbol   : FDXS
-    name     : Micro DAX
-    increment: 1
-    market   : IN
-    product  : FU
-    exchange : EUREX
-    pointVal : 1
-    costPerTrade: 6
-    margin   : 1600
+- symbol      : FDXS
+  name        : Micro DAX
+  increment   : 1
+  market      : IN
+  product     : FU
+  exchange    : EUREX
+  pointValue  : 1
+  costPerTrade: 6
+  margin      : 1600
 
-  #--- Metals --------------------------------
+#--- Metals --------------------------------
 
-  - symbol   : GC
-    name     : Gold
-    increment: 0.1
-    market   : ME
-    product  : FU
-    exchange : COMEX
-    pointVal : 100
-    costPerTrade:
-    margin   :
+- symbol      : GC
+  name        : Gold
+  increment   : 0.1
+  market      : ME
+  product     : FU
+  exchange    : COMEX
+  pointValue  : 100
+  costPerTrade:
+  margin      :
 
-  - symbol   : MGC
-    name     : Micro Gold
-    increment: 0.1
-    market   : ME
-    product  : FU
-    exchange : COMEX
-    pointVal : 10
-    costPerTrade: 4
-    margin   : 1040
+- symbol      : MGC
+  name        : Micro Gold
+  increment   : 0.1
+  market      : ME
+  product     : FU
+  exchange    : COMEX
+  pointValue  : 10
+  costPerTrade: 4
+  margin      : 1040
 
-  - symbol   : PL
-    name     : Platinum
-    increment: 0.1
-    market   : ME
-    product  : FU
-    exchange : NYMEX
-    pointVal : 50
-    costPerTrade:
-    margin   :
+- symbol      : PL
+  name        : Platinum
+  increment   : 0.1
+  market      : ME
+  product     : FU
+  exchange    : NYMEX
+  pointValue  : 50
+  costPerTrade:
+  margin      :
 
-  - symbol   : SI
-    name     : Silver
-    increment: 0.005
-    market   : ME
-    product  : FU
-    exchange : COMEX
-    pointVal : 5000
-    costPerTrade:
-    margin   :
+- symbol      : SI
+  name        : Silver
+  increment   : 0.005
+  market      : ME
+  product     : FU
+  exchange    : COMEX
+  pointValue  : 5000
+  costPerTrade:
+  margin      :
 
-  - symbol   : HG
-    name     : Copper
-    increment: 0.0005
-    market   : ME
-    product  : FU
-    exchange : COMEX
-    pointVal : 25000
-    costPerTrade:
-    margin   :
+- symbol      : HG
+  name        : Copper
+  increment   : 0.0005
+  market      : ME
+  product     : FU
+  exchange    : COMEX
+  pointValue  : 25000
+  costPerTrade:
+  margin      :
 
-  - symbol   : MHG
-    name     : Copper
-    increment: 0.0005
-    market   : ME
-    product  : FU
-    exchange : COMEX
-    pointVal : 2500
-    costPerTrade:
-    margin   :
+- symbol      : MHG
+  name        : Copper
+  increment   : 0.0005
+  market      : ME
+  product     : FU
+  exchange    : COMEX
+  pointValue  : 2500
+  costPerTrade:
+  margin      :
 
-  #--- Energy --------------------------------
+#--- Energy --------------------------------
 
-  - symbol   : CL
-    name     : Crude Oil
-    increment: 0.01
-    market   : EN
-    product  : FU
-    exchange : NYMEX
-    pointVal : 1000
-    costPerTrade:
-    margin   :
+- symbol      : CL
+  name        : Crude Oil
+  increment   : 0.01
+  market      : EN
+  product     : FU
+  exchange    : NYMEX
+  pointValue  : 1000
+  costPerTrade:
+  margin      :
 
-  - symbol   : MCL
-    name     : Micro Crude Oil
-    increment: 0.01
-    market   : EN
-    product  : FU
-    exchange : NYMEX
-    pointVal : 100
-    costPerTrade: 4
-    margin   : 2700
+- symbol      : MCL
+  name        : Micro Crude Oil
+  increment   : 0.01
+  market      : EN
+  product     : FU
+  exchange    : NYMEX
+  pointValue  : 100
+  costPerTrade: 4
+  margin      : 2700
 
-  - symbol   : HO
-    name     : Heating Oil
-    increment: 0.0001
-    market   : EN
-    product  : FU
-    exchange : NYMEX
-    pointVal : 42000
-    costPerTrade:
-    margin   :
+- symbol      : HO
+  name        : Heating Oil
+  increment   : 0.0001
+  market      : EN
+  product     : FU
+  exchange    : NYMEX
+  pointValue  : 42000
+  costPerTrade:
+  margin      :
 
-  - symbol   : NG
-    name     : Natural Gas
-    increment: 0.001
-    market   : EN
-    product  : FU
-    exchange : NYMEX
-    pointVal : 10000
-    costPerTrade:
-    margin   :
+- symbol      : NG
+  name        : Natural Gas
+  increment   : 0.001
+  market      : EN
+  product     : FU
+  exchange    : NYMEX
+  pointValue  : 10000
+  costPerTrade:
+  margin      :
 
-  - symbol   : RB
-    name     : RBOB Gasoline
-    increment: 0.0001
-    market   : EN
-    product  : FU
-    exchange : NYMEX
-    pointVal : 42000
-    costPerTrade:
-    margin   :
+- symbol      : RB
+  name        : RBOB Gasoline
+  increment   : 0.0001
+  market      : EN
+  product     : FU
+  exchange    : NYMEX
+  pointValue  : 42000
+  costPerTrade:
+  margin      :
 
-  #--- Currencies --------------------------------
+#--- Currencies --------------------------------
 
-  - symbol   : 6A
-    name     : Australian Dollar
-    increment: 0.00005
-    market   : FX
-    product  : FU
-    exchange : CME
-    pointVal : 100000
-    costPerTrade:
-    margin   :
+- symbol      : 6A
+  name        : Australian Dollar
+  increment   : 0.00005
+  market      : FX
+  product     : FU
+  exchange    : CME
+  pointValue  : 100000
+  costPerTrade:
+  margin      :
 
-  - symbol   : 6B
-    name     : British Pound
-    increment: 0.0001
-    market   : FX
-    product  : FU
-    exchange : CME
-    pointVal : 62500
-    costPerTrade:
-    margin   : 2977
+- symbol      : 6B
+  name        : British Pound
+  increment   : 0.0001
+  market      : FX
+  product     : FU
+  exchange    : CME
+  pointValue  : 62500
+  costPerTrade:
+  margin      : 2977
 
-  - symbol   : MBP
-    name     : Micro British Pound
-    increment: 0.0001
-    market   : FX
-    product  : FU
-    exchange : CME
-    pointVal : 6250
-    costPerTrade: 2
-    margin   : 313
+- symbol      : M6B
+  name        : Micro British Pound
+  increment   : 0.0001
+  market      : FX
+  product     : FU
+  exchange    : CME
+  pointValue  : 6250
+  costPerTrade: 2
+  margin      : 313
 
-  - symbol   : 6C
-    name     : Canadian Dollar
-    increment: 0.00005
-    market   : FX
-    product  : FU
-    exchange : CME
-    pointVal : 100000
-    costPerTrade:
-    margin   :
+- symbol      : 6C
+  name        : Canadian Dollar
+  increment   : 0.00005
+  market      : FX
+  product     : FU
+  exchange    : CME
+  pointValue  : 100000
+  costPerTrade:
+  margin      :
 
-  - symbol   : 6E
-    name     : EuroFX
-    increment: 0.00005
-    market   : FX
-    product  : FU
-    exchange : CME
-    pointVal : 125000
-    costPerTrade:
-    margin   :
+- symbol      : 6E
+  name        : EuroFX
+  increment   : 0.00005
+  market      : FX
+  product     : FU
+  exchange    : CME
+  pointValue  : 125000
+  costPerTrade:
+  margin      :
 
-  - symbol   : 6J
-    name     : Japanese Yen
-    increment: 0.0000001
-    market   : FX
-    product  : FU
-    exchange : CME
-    pointVal : 12500000
-    costPerTrade:
-    margin   :
+- symbol      : 6J
+  name        : Japanese Yen
+  increment   : 0.0000001
+  market      : FX
+  product     : FU
+  exchange    : CME
+  pointValue  : 12500000
+  costPerTrade:
+  margin      :
 
-  #--- Grains --------------------------------
+#--- Grains --------------------------------
 
-  - symbol   : ZS
-    name     : Soybeans
-    increment:
-    market   : GR
-    product  : FU
-    exchange : CBOT
-    pointVal :
-    costPerTrade:
-    margin   :
+- symbol      : ZS
+  name        : Soybeans
+  increment   :
+  market      : GR
+  product     : FU
+  exchange    : CBOT
+  pointValue  :
+  costPerTrade:
+  margin      :
 
-  - symbol   : ZC
-    name     : Corn
-    increment:
-    market   : GR
-    product  : FU
-    exchange : CBOT
-    pointVal :
-    costPerTrade:
-    margin   :
+- symbol      : ZC
+  name        : Corn
+  increment   :
+  market      : GR
+  product     : FU
+  exchange    : CBOT
+  pointValue  :
+  costPerTrade:
+  margin      :
 
-  #--- Softs --------------------------------
+#--- Softs --------------------------------
 
-  - symbol   : KC
-    name     : Coffee "C"
-    increment: 0.05
-    market   : SO
-    product  : FU
-    exchange : IFUS
-    pointVal : 375
-    costPerTrade:
-    margin   :
+- symbol      : KC
+  name        : Coffee "C"
+  increment   : 0.05
+  market      : SO
+  product     : FU
+  exchange    : IFUS
+  pointValue  : 375
+  costPerTrade:
+  margin      :
 
-  - symbol   : CT
-    name     : Cotton N. 2
-    increment: 0.01
-    market   : SO
-    product  : FU
-    exchange : IFUS
-    pointVal : 500
-    costPerTrade:
-    margin   :
+- symbol      : CT
+  name        : Cotton N. 2
+  increment   : 0.01
+  market      : SO
+  product     : FU
+  exchange    : IFUS
+  pointValue  : 500
+  costPerTrade:
+  margin      :
 
-  #--- Bonds --------------------------------
+#--- Bonds --------------------------------
 
-  - symbol   : ZN
-    name     : 10-Year T-Note
-    increment: 0.015625
-    market   : BO
-    product  : FU
-    exchange : CBOT
-    pointVal : 1000
-    costPerTrade:
-    margin   :
+- symbol      : ZN
+  name        : 10-Year T-Note
+  increment   : 0.015625
+  market      : BO
+  product     : FU
+  exchange    : CBOT
+  pointValue  : 1000
+  costPerTrade:
+  margin      :
 
-  - symbol   : ZB
-    name     : U.S. Treasury Bond
-    increment: 0.03125
-    market   : BO
-    product  : FU
-    exchange : CBOT
-    pointVal : 1000
-    costPerTrade:
-    margin   :
+- symbol      : ZB
+  name        : U.S. Treasury Bond
+  increment   : 0.03125
+  market      : BO
+  product     : FU
+  exchange    : CBOT
+  pointValue  : 1000
+  costPerTrade:
+  margin      :
 
-  #--- Meats --------------------------------
+#--- Meats --------------------------------
 
-  - symbol   : GF
-    name     : Feeder Cattle
-    increment:
-    market   : MT
-    product  : FU
-    exchange : CME
-    pointVal :
-    costPerTrade:
-    margin   :
+- symbol      : GF
+  name        : Feeder Cattle
+  increment   :
+  market      : MT
+  product     : FU
+  exchange    : CME
+  pointValue  :
+  costPerTrade:
+  margin      :
 
-  - symbol   : HE
-    name     : Lean Hog
-    increment:
-    market   : MT
-    product  : FU
-    exchange : CME
-    pointVal :
-    costPerTrade:
-    margin   :
+- symbol      : HE
+  name        : Lean Hog
+  increment   :
+  market      : MT
+  product     : FU
+  exchange    : CME
+  pointValue  :
+  costPerTrade:
+  margin      :
 
-  - symbol   : LE
-    name     : Live Cattle
-    increment:
-    market   : MT
-    product  : FU
-    exchange : CME
-    pointVal :
-    costPerTrade:
-    margin   :
+- symbol      : LE
+  name        : Live Cattle
+  increment   :
+  market      : MT
+  product     : FU
+  exchange    : CME
+  pointValue  :
+  costPerTrade:
+  margin      :
