--- a/src/assets/presets/products.yaml
+++ b/src/assets/presets/products.yaml
@@ -10,6 +10,7 @@
   pointValue  : 50
   costPerTrade:
   margin      :
+  strategies  : reversal(good), trendf(hard), bias(no)
 
 - symbol      : MES
   name        : Micro E-Mini S&P 500
@@ -20,6 +21,7 @@
   pointValue  : 5
   costPerTrade: 4
   margin      : 1314
+  strategies  : reversal(good), trendf(hard), bias(no)
 
 - symbol      : NQ
   name        : E-Mini Nasdaq-100
@@ -70,6 +72,7 @@
   pointValue  : 25
   costPerTrade:
   margin      :
+  strategies  : bias(good), reversal(good,first-half-day), trendf(intraday)
 
 - symbol      : FDXM
   name        : Mini DAX
@@ -80,6 +83,7 @@
   pointValue  : 5
   costPerTrade:
   margin      :
+  strategies  : bias, reversal(first-half-day), intraday
 
 - symbol      : FDXS
   name        : Micro DAX
@@ -90,6 +94,7 @@
   pointValue  : 1
   costPerTrade: 6
   margin      : 1600
+  strategies  : bias, reversal(first-half-day), intraday
 
 #--- Metals --------------------------------
 
@@ -102,6 +107,7 @@
   pointValue  : 100
   costPerTrade:
   margin      :
+  strategies  : bias
 
 - symbol      : MGC
   name        : Micro Gold
@@ -112,6 +118,7 @@
   pointValue  : 10
   costPerTrade: 4
   margin      : 1040
+  strategies  : bias
 
 - symbol      : PL
   name        : Platinum
@@ -164,6 +171,7 @@
   pointValue  : 1000
   costPerTrade:
   margin      :
+  strategies  : bias(good), reversal(no), trendf(intraday, overnight), 5min
 
 - symbol      : MCL
   name        : Micro Crude Oil
@@ -174,6 +182,7 @@
   pointValue  : 100
   costPerTrade: 4
   margin      : 2700
+  strategies  : bias(good), reversal(no), trendf(intraday, overnight), 5min
 
 - symbol      : HO
   name        : Heating Oil
@@ -256,6 +265,7 @@
   pointValue  : 125000
   costPerTrade:
   margin      :
+  strategies  : bias, 5min
 
 - symbol      : 6J
   name        : Japanese Yen
@@ -354,6 +364,7 @@
   pointValue  :
   costPerTrade:
   margin      :
+  strategies  : overnight
 
 - symbol      : LE
   name        : Live Cattle
@@ -364,3 +375,6 @@
   pointValue  :
   costPerTrade:
   margin      :
+  strategies  : reversal(good), trendf(overnight, weak), bias(no)
+
+# cocoa: overnight
