--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@angular/compiler": "^19.2.8",
     "@angular/core": "^19.2.8",
     "@angular/forms": "^19.2.8",
-    "@angular/material": "^18.2.14",
+    "@angular/material": "^19.2.11",
     "@angular/platform-browser": "^19.2.8",
     "@angular/platform-browser-dynamic": "^19.2.8",
     "@angular/router": "^19.2.8",
-    "angular-auth-oidc-client": "^18.0.2",
-    "apexcharts": "^3.54.1",
-    "ng-apexcharts": "1.12.0",
+    "angular-auth-oidc-client": "^19.0.0",
+    "apexcharts": "^4.7.0",
+    "ng-apexcharts": "^1.15.0",
     "normalize.css": "^8.0.1",
-    "rxjs": "~7.8.1",
+    "rxjs": "~7.8.2",
     "tslib": "^2.3.0",
     "yaml": "^2.3.2",
     "zone.js": "~0.15.0"
@@ -32,9 +32,9 @@
     "@angular-devkit/build-angular": "^19.2.9",
     "@angular/cli": "~19.2.9",
     "@angular/compiler-cli": "^19.2.8",
-    "@types/jasmine": "~4.3.6",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.2",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
