--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.11",
-    "@angular/common": "^19.2.11",
-    "@angular/compiler": "^19.2.11",
-    "@angular/core": "^19.2.11",
-    "@angular/forms": "^19.2.11",
-    "@angular/material": "^19.2.16",
-    "@angular/platform-browser": "^19.2.11",
-    "@angular/platform-browser-dynamic": "^19.2.11",
-    "@angular/router": "^19.2.11",
+    "@angular/animations": "^19.2.14",
+    "@angular/common": "^19.2.14",
+    "@angular/compiler": "^19.2.14",
+    "@angular/core": "^19.2.14",
+    "@angular/forms": "^19.2.14",
+    "@angular/material": "^19.2.19",
+    "@angular/platform-browser": "^19.2.14",
+    "@angular/platform-browser-dynamic": "^19.2.14",
+    "@angular/router": "^19.2.14",
     "angular-auth-oidc-client": "^19.0.1",
     "apexcharts": "^4.7.0",
-    "ng-apexcharts": "^1.15.0",
+    "ng-apexcharts": "~1.15.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.3.0",
     "yaml": "^2.3.2",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.12",
-    "@angular/cli": "~19.2.12",
-    "@angular/compiler-cli": "^19.2.11",
+    "@angular-devkit/build-angular": "^19.2.15",
+    "@angular/cli": "~19.2.15",
+    "@angular/compiler-cli": "^19.2.14",
     "@types/jasmine": "~5.1.8",
     "jasmine-core": "~5.7.1",
     "karma": "~6.4.4",
