--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --disable-host-check --host bitfever-server --port 8444",
+    "start": "ng serve --disable-host-check --host tradalia-server --port 8444",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
